// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedComponent matches withError snapshot: with error mount 1`] = `
.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-5 {
  padding: 0;
  margin: 0;
  border: 0;
  box-sizing: border-box;
  width: 100%;
}

.emotion-5:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    max-width: 960px;
  }
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(MultiChoice)
  error="example"
  label="example"
>
  <MultiChoice
    className="glamor-0"
    error="example"
    label="example"
    meta={Object {}}
  >
    <Styled(div)
      className="glamor-0"
    >
      <div
        className="glamor-0 glamor-5"
      >
        <glamorous(LabelText)>
          <LabelText
            className="glamor-0"
          >
            <Styled(span)
              className="glamor-0"
            >
              <span
                className="glamor-0 glamor-1"
              >
                example
              </span>
            </Styled(span)>
          </LabelText>
        </glamorous(LabelText)>
        example
      </div>
    </Styled(div)>
  </MultiChoice>
</glamorous(MultiChoice)>
`;

exports[`ThemedComponent matches wrapper snapshot: wrapper mount 1`] = `
.emotion-13 {
  padding: 0;
  margin: 0;
  border: 0;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
}

.emotion-13:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-13 {
    max-width: 960px;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-5 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #6f777b;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-9 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-9 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(MultiChoice)
  hint="example"
  label="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <MultiChoice
    className="glamor-0"
    hint="example"
    label="example"
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <Styled(div)
      className="glamor-0"
      error="example"
    >
      <div
        className="glamor-0 glamor-13"
      >
        <glamorous(LabelText)>
          <LabelText
            className="glamor-0"
          >
            <Styled(span)
              className="glamor-0"
            >
              <span
                className="glamor-0 glamor-1"
              >
                example
              </span>
            </Styled(span)>
          </LabelText>
        </glamorous(LabelText)>
        <glamorous(HintText)>
          <HintText
            className="glamor-0"
          >
            <Styled(span)
              className="glamor-0"
            >
              <span
                className="glamor-0 glamor-5"
              >
                example
              </span>
            </Styled(span)>
          </HintText>
        </glamorous(HintText)>
        <glamorous(ErrorText)>
          <ErrorText
            className="glamor-0"
          >
            <Styled(span)
              className="glamor-0"
            >
              <span
                className="glamor-0 glamor-9"
              >
                example
              </span>
            </Styled(span)>
          </ErrorText>
        </glamorous(ErrorText)>
        example
      </div>
    </Styled(div)>
  </MultiChoice>
</glamorous(MultiChoice)>
`;
